fixed table scroll error + thead rendering + data load after modal visible

--- a/css/style.css
+++ b/css/style.css
@@ -561,7 +561,7 @@ label {
  }
 
 
-@media(max-width:768px)
+@media(min-width: 467px) and (max-width:768px)
 {
 
  .wrap-cards {
